Add automatic sitemap generation for SEO.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Dependencies
 markdown:         kramdown
 highlighter:      rouge
-gems:             [jekyll-paginate, jekyll-gist]
+gems:             [jekyll-gist, jekyll-paginate, jekyll-sitemap]
 
 # Permalinks
 permalink:        pretty
